--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:textSize="40dp"/>
 
             <EditText
-                android:id="@+id/entry"
+                android:id="@+id/input"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_centerHorizontal="true"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:text="enter"
                 android:layout_marginTop="20dp"
-                android:layout_below="@id/entry" />
+                android:layout_below="@id/input" />
 
 
         </RelativeLayout>
