--- a/app/src/main/res/layout/item_rule.xml
+++ b/app/src/main/res/layout/item_rule.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <RelativeLayout
@@ -49,20 +49,10 @@
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="0.5dp"
+            android:layout_height="1dp"
             android:background="#000000"
             android:layout_below="@id/new_state"
             android:layout_marginTop="5dp"/>
-
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/garbage"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:clickable="true"/>
 
 
     </RelativeLayout>
