--- a/app/src/main/res/layout/activity_executing.xml
+++ b/app/src/main/res/layout/activity_executing.xml
@@ -9,51 +9,41 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
+
     android:background="#DCDCDC"
     tools:context="com.example.huawei.maquinadeturing.activities.ExecutingActivity">
 
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="ACCEPTED or REJECTED!"
+        android:textSize="30dp"
+        android:layout_marginBottom="90dp"
+        android:layout_marginTop="20dp"/>
 
     <android.support.v7.widget.CardView
         android:layout_gravity="center"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        card_view:cardBackgroundColor="#808080">
+        card_view:cardBackgroundColor="#808080"
+        android:layout_below="@id/status"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true">
 
-
-        <TextView
-            android:id="@+id/left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="001"
-            android:textSize="40dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="45dp"/>
 
         <TextView
             android:id="@+id/selected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="1"
+            android:text="1001"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
             android:textSize="40dp"
-            android:textStyle="bold"
-            android:textColor="#008000"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"/>
+            />
 
-        <TextView
-            android:id="@+id/right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="001"
-            android:textSize="40dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="45dp"/>
 
         <ImageView
             android:id="@+id/play"
@@ -63,7 +53,8 @@
             android:src="@drawable/play_button"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"/>
 
         <ImageView
             android:id="@+id/pause"
@@ -74,7 +65,7 @@
             android:src="@drawable/pause_button"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="25dp"
             android:layout_gravity="center" />
 
         <ImageView
@@ -85,8 +76,17 @@
             android:layout_toLeftOf="@id/play"
             android:layout_below="@id/selected"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginRight="70dp"
             android:layout_gravity="center"/>
+
+        <ImageView
+            android:id="@+id/next"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/next"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="80dp"/>
 
     </android.support.v7.widget.CardView>
 
