--- a/app/src/main/res/layout/activity_executing.xml
+++ b/app/src/main/res/layout/activity_executing.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
 
-    android:background="#DCDCDC"
+    android:background="#2E2E2E"
     tools:context="com.example.huawei.maquinadeturing.activities.ExecutingActivity">
 
 
@@ -19,19 +19,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="ACCEPTED or REJECTED!"
+        android:text="ACCEPTED!"
         android:textSize="30dp"
-        android:layout_marginBottom="90dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textColor="#008000"/>
 
     <android.support.v7.widget.CardView
         android:layout_gravity="center"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
         card_view:cardBackgroundColor="#808080"
         android:layout_below="@id/status"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        card_view:cardCornerRadius="15dp">
 
 
         <TextView
@@ -41,52 +44,37 @@
             android:text="1001"
             android:layout_gravity="center"
             android:layout_marginBottom="50dp"
-            android:textSize="40dp"
+            android:textSize="45dp"
+            android:textColor="#FFFFFF"
             />
 
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/circpause"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="60dp" />
 
         <ImageView
             android:id="@+id/play"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_below="@id/selected"
-            android:src="@drawable/play_button"
+            android:src="@drawable/pbutton"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"/>
-
-        <ImageView
-            android:id="@+id/pause"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/selected"
-            android:layout_toRightOf="@id/play"
-            android:src="@drawable/pause_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginTop="50dp"
             android:layout_gravity="center" />
 
-        <ImageView
-            android:id="@+id/stop"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/stop"
-            android:layout_toLeftOf="@id/play"
-            android:layout_below="@id/selected"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="70dp"
-            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/next"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/next"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="80dp"/>
+            android:src="@drawable/stepcirc"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="60dp"/>
 
     </android.support.v7.widget.CardView>
 
