--- a/app/src/main/res/layout/item_rule.xml
+++ b/app/src/main/res/layout/item_rule.xml
@@ -13,7 +13,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estado atual: "
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#C0C0C0"/>
 
         <TextView
             android:id="@+id/current_symbol"
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:text="Símbolo atual: "
             android:layout_below="@id/current_state"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#C0C0C0"/>
 
         <TextView
             android:id="@+id/new_symbol"
@@ -29,7 +31,8 @@
             android:layout_height="wrap_content"
             android:text="Novo símbolo: "
             android:layout_below="@id/current_symbol"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#C0C0C0"/>
 
         <TextView
             android:id="@+id/direction"
@@ -37,7 +40,8 @@
             android:layout_height="wrap_content"
             android:text="Direção: "
             android:layout_below="@id/new_symbol"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#C0C0C0"/>
 
         <TextView
             android:id="@+id/new_state"
@@ -45,7 +49,8 @@
             android:layout_height="wrap_content"
             android:text="Novo estado: "
             android:layout_below="@id/direction"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:textColor="#C0C0C0"/>
 
         <View
             android:layout_width="wrap_content"
