--- a/app/src/main/res/layout/activity_executing.xml
+++ b/app/src/main/res/layout/activity_executing.xml
@@ -27,6 +27,7 @@
         android:textColor="#008000"/>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card"
         android:layout_gravity="center"
         android:layout_width="350dp"
         android:layout_height="300dp"
@@ -77,6 +78,17 @@
             android:layout_marginLeft="60dp"/>
 
     </android.support.v7.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/text_current_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Estado atual: "
+        android:layout_below="@id/card"
+        android:textSize="25dp"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="7dp"/>
 
 
 
